# src/dtos/user.dto.js
@@ -2,7 +2,10 @@
 
 // Register response DTO
 export const RegisterResponseDTO = (user) => {
-    console.log("DTO성공");
-    console.log(user[0]);
+
     return {"email": user[0].login_id, "name": user[0].name};
+}
+
+export const MissionResponseDTO = (mission) =>{
+    return {"mission_id": mission[0].mission_id, "member_id": mission[0].member_id};
 }
