# swagger/user.yaml
@@ -81,4 +81,65 @@ paths:
                 type: string
                 example: 잘못된 요청입니다
 
+/user/mission:
+    post:
+      tags:
+        - User
+      summary: 미션도전
+      parameters:
+      - name: mission
+        in: body
+        required: true
+        schema:
+          properties:
+            member_id:
+              type: int
+              description: 유저 id
+              example: 1
+            mission_id:
+              type: int
+              description: 미션 id
+              example: 2
+      responses:
+        '200':
+          description: 미션 도전 성공!
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: object
+                example: {
+                  "member_id": 1,
+                  "mission_id": 2,
+                }
+                
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
         
